--- a/matchinfo.html
+++ b/matchinfo.html
@@ -288,8 +288,14 @@
     <!-- end header section -->
   </div>
     <!-- slider section -->
-    <section class="slider_section">
+
+    <div style="margin: 20px 0 0 20px;">
+      <a href="#" onclick="goBack();"> <i class="fa fa-arrow-left" aria-hidden="true" style="font-size: 25px;color: #1b1261;"></i></a>
+    </div>
+    <section class="slider_section" style="padding-top:0px !important">
+
   <div class="container">
+
     <div class="card">
   <div class="card-header bg-info text-warning d-flex justify-content-between align-items-center">
     <h4>Test Your Luck <span class="text-white">[Matches]</span></h4>
@@ -460,6 +466,9 @@ $("#login").show("slow");
     
 });
 
+function goBack() {
+      window.history.back();
+    }
 
 function renderCards(data) {
   const container = document.getElementById("question-container");
