--- a/profile.html
+++ b/profile.html
@@ -844,7 +844,7 @@ function viewReferral() {
         generateViewReferralTable(response.data);
       } else {
         console.error("Failed with status:", response.statuscode, response.message);
-        showSnackbar(response.message);
+       // showSnackbar(response.message);
       }
     })
     .catch(error => {
