--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ function register() {
         data: JSON.stringify({
             email: email,
             role:"",
-            referredcode: referralCode,
+            referred_code: referralCode,
             devicetoken: "",
             devicetype: ""
         }),
