--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,58 +1,96 @@
-<html>
-    <head>
-        <title>B2WIN.AI</title>
-    </head>
-    <body>
-        <div>
-            Privacy Policy
-This Privacy Policy explains how we collect, use, and protect your personal information during your participation in the b2win Contest (the "Contest"). By participating, you agree to the practices outlined here.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Privacy Policy for the b2win Contest">
+    <title>Privacy Policy - b2win Contest</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #4CAF50;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Privacy Policy</h1>
+    </header>
+    <div class="container">
+        <p>This Privacy Policy explains how we collect, use, and protect your personal information during your participation in the b2win Contest (the "Contest"). By participating, you agree to the practices outlined here.</p>
 
-1. Information We Collect
-Email Address: Collected during registration to manage your participation and communicate with you.
+        <h2>1. Information We Collect</h2>
+        <ul>
+            <li><strong>Email Address:</strong> Collected during registration to manage your participation and communicate with you.</li>
+            <li><strong>Gameplay Data:</strong> Details about your participation, including scores and activities, to assess performance and determine winners.</li>
+            <li><strong>Technical Information:</strong> Data such as device details and IP address to ensure platform security and functionality.</li>
+        </ul>
 
-Gameplay Data: Details about your participation, including scores and activities, to assess performance and determine winners.
+        <h2>2. How We Use Your Information</h2>
+        <ul>
+            <li>To verify eligibility and manage registration.</li>
+            <li>To facilitate gameplay, scoring, and prize distribution.</li>
+            <li>To communicate updates and promotional offers.</li>
+            <li>To prevent fraud and ensure compliance with Contest rules.</li>
+        </ul>
 
-Technical Information: Data such as device details and IP address to ensure platform security and functionality.
+        <h2>3. Sharing Your Information</h2>
+        <ul>
+            <li>We do not sell your data. We may share it with:</li>
+            <ul>
+                <li>Service providers assisting in Contest operations.</li>
+                <li>Authorities, if required by law.</li>
+                <li>With your consent, for promotional purposes.</li>
+            </ul>
+        </ul>
 
-2. How We Use Your Information
-To verify eligibility and manage registration.
+        <h2>4. Data Retention and Security</h2>
+        <p>Your data is stored securely and retained only as necessary for Contest operations or legal obligations. We use encryption and other security measures to protect your information.</p>
 
-To facilitate gameplay, scoring, and prize distribution.
+        <h2>5. Your Rights</h2>
+        <ul>
+            <li>You can access, update, or delete your information by contacting <a href="mailto:ankitas@itisiya.com">ankitas@itisiya.com</a>.</li>
+            <li>Withdraw consent for promotional use of your name and likeness.</li>
+        </ul>
 
-To communicate updates and promotional offers.
+        <h2>6. Cookies and Tracking</h2>
+        <p>Our platform may use cookies to enhance your experience. You can manage cookie preferences in your browser.</p>
 
-To prevent fraud and ensure compliance with Contest rules.
+        <h2>7. Changes to This Policy</h2>
+        <p>We may update this Privacy Policy. Changes will be posted on our website and take effect immediately.</p>
 
-3. Sharing Your Information
-We do not sell your data. We may share it with:
+        <h2>8. Governing Law</h2>
+        <p>This policy is governed by the laws of [jurisdiction]. Disputes will be handled in courts of [jurisdiction].</p>
 
-Service providers assisting in Contest operations.
-
-Authorities, if required by law.
-
-With your consent, for promotional purposes.
-
-4. Data Retention and Security
-Your data is stored securely and retained only as necessary for Contest operations or legal obligations. We use encryption and other security measures to protect your information.
-
-5. Your Rights
-You can:
-
-Access, update, or delete your information by contacting mailto:ankitas@itisiya.com.
-
-Withdraw consent for promotional use of your name and likeness.
-
-6. Cookies and Tracking
-Our platform may use cookies to enhance your experience. You can manage cookie preferences in your browser.
-
-7. Changes to This Policy
-We may update this Privacy Policy. Changes will be posted on our website and take effect immediately.
-
-8. Governing Law
-This policy is governed by the laws of [jurisdiction]. Disputes will be handled in courts of [jurisdiction].
-
-9. Contact Us
-For questions or concerns, contact us at mailto:ankitas@itisiya.com.
-        </div>
-    </body>
+        <h2>9. Contact Us</h2>
+        <p>For questions or concerns, contact us at <a href="mailto:ankitas@itisiya.com">ankitas@itisiya.com</a>.</p>
+    </div>
+</body>
 </html>
