--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -27,7 +27,10 @@
             background: white;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        h1, h2 {
+        h1 {
+            color: white;
+        }
+         h2 {
             color: #4CAF50;
         }
         a {
