--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,7 +17,7 @@
         header {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 20px;
+            padding: 5px;
             text-align: center;
         }
         .container {
