--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
 <head>
       <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B2Win.AI Admin</title>
+    <title>Responsive Bootstrap Advance Admin Template</title>
 
     <!-- BOOTSTRAP STYLES-->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -42,9 +42,6 @@
       transform: rotate(360deg);
     }
   }
-
-
-
 </style>
 </head>
 <body style="background-color: #E2E2E2;">
@@ -93,6 +90,8 @@
 <div id="loader" style="display: none;">
   <div class="spinner"></div>
 </div>
+
+
 
   <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
 
