--- a/admin/wonSummary.html
+++ b/admin/wonSummary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>B2Win.AI Admin</title>
+    <title>Responsive Bootstrap Advance Admin Template</title>
 
     <!-- BOOTSTRAP STYLES-->
     <link href="assets/css/bootstrap.css" rel="stylesheet" />
@@ -14,6 +14,7 @@
     <!--CUSTOM MAIN STYLES-->
     <link href="assets/css/custom.css" rel="stylesheet" />
     <!-- GOOGLE FONTS-->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
       <style type="text/css">
   #loader {
     position: fixed;
@@ -258,7 +259,7 @@
                                           <th>Match</th>
                                           <th>Match Date</th>
                                           <th>Question</th>
-                                          <th>Total Contest</th>
+                                          <th>Total Points</th>
                                           <th>Total Winners</th>
                                           <th>Total Losers</th>
                                           <th>Total Contest Points</th>
